fix. fixed position of top text on mobile and web.

--- a/css/sideMenu.css
+++ b/css/sideMenu.css
@@ -12,7 +12,7 @@
 }
 
 #sideMenu ul{
-  margin-top: -1rem;
+  margin-top: -3rem;
   padding-top: 8rem;
   padding-bottom: 5rem;
   background-color: black;
